<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
   android:layout_width="match_parent" android:layout_height="match_parent"
   android:orientation="vertical" android:paddingBottom="10dp"
   android:id="@+id/containerLinearLayout" android:gravity="center"
   android:background="@drawable/widget_bg_normal">
   <ImageView android:layout_width="match_parent"
      android:layout_height="75dp" android:id="@+id/weatherImageView"/>
   <TextView android:id="@+id/location" android:layout_width="match_parent"
      android:layout_height="wrap_content" android:textSize="14sp"
      android:textColor="@android:color/black" android:gravity="center"
      android:layout_marginBottom="5dp"/>
   <LinearLayout android:layout_width="match_parent" 
      android:layout_height="wrap_content" android:orientation="horizontal"
      android:gravity="center">
      <TextView android:layout_width="wrap_content" 
         android:layout_height="wrap_content" android:textSize="10sp"
         android:text="@string/temperature_label_string"
         android:textColor="@android:color/black"/>
      <TextView android:layout_width="wrap_content"
         android:layout_height="wrap_content" android:textSize="10sp"
         android:id="@+id/temperatureTextView" 
         android:textColor="@android:color/black"/>
   </LinearLayout>
   <LinearLayout android:layout_width="match_parent" 
      android:layout_height="wrap_content" android:orientation="horizontal"
      android:gravity="center">
      <TextView android:layout_width="wrap_content"
         android:layout_height="wrap_content" android:textSize="10sp"
         android:text="@string/feels_like_label_string"
         android:textColor="@android:color/black"/>
      <TextView android:layout_width="wrap_content" android:textSize="10sp"
         android:layout_height="wrap_content" android:id="@+id/feels_likeTextView"
         android:textColor="@android:color/black"/>
   </LinearLayout>
   <LinearLayout android:layout_width="match_parent"
      android:layout_height="wrap_content" android:orientation="horizontal"
      android:gravity="center">
      <TextView android:layout_width="wrap_content"
         android:layout_height="wrap_content" android:textSize="10sp"
         android:text="@string/humidity_label_string" 
         android:textColor="@android:color/black"/>
      <TextView android:layout_width="wrap_content" 
         android:layout_height="wrap_content" android:textSize="10sp"
         android:id="@+id/humidityTextView" 
         android:textColor="@android:color/black"/>
   </LinearLayout>
   <LinearLayout android:layout_width="match_parent"
      android:layout_height="wrap_content" android:orientation="horizontal"
      android:gravity="center">
      <TextView android:layout_width="wrap_content" 
         android:layout_height="wrap_content" android:textSize="10sp"
         android:text="@string/chance_of_precipitation_label_string"
         android:textColor="@android:color/black"/>
      <TextView android:layout_width="wrap_content"
         android:layout_height="wrap_content" android:textSize="10sp"
         android:id="@+id/precipitationTextView"
         android:textColor="@android:color/black"/>
   </LinearLayout>
   <TextView android:layout_width="match_parent" android:textSize="10sp"
      android:layout_height="wrap_content" 
      android:text="@string/click_widget_message" 
      android:textColor="@android:color/black" android:gravity="center"
      android:layout_marginBottom="10dp"/>
</LinearLayout>
